# RoExtract-ru

./: Cargo.toml  README.md
docs/: languages.md
docs/be-BY/: CLI.md  README.md
docs/en-GB/: README.md
docs/ru-RU/: CLI.md  README.md
src/: gui.rs  logic.rs
src/logic/: sql_database.rs
