[package]
name = "RoExtract"
version = "1.1.0"
edition = "2021"

[dependencies]
chrono = { features = ["clock"], default-features = false, version = "0.4.41" }
clap = { version = "4.5.45", features = ["derive"], default-features = true }
eframe = { features = ["default_fonts", "x11", "glow"], default-features = false, version = "0.32.0" }
egui = { default-features = false, version = "0.32" }
egui_commonmark = { default-features = false, version = "0.21.1" }
egui_dock = "0.17.0"
filetime = "0.2.25"
fluent-bundle = { version = "0.16.0", default-features = false }
hex = "0.4.3"
image = { version = "0.25.6", default-features = false, features = ["png","webp"] }
native-dialog = "0.9.0"
open = "5.3.2"
reqwest = { version = "0.12.23", features = ["blocking"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.219", features = ["derive"], default-features = false }
serde_json = { version = "1.0.142", features=["std"], default-features = false }
strum = "0.27.2"
strum_macros = "0.27.2"
sys-locale = "0.3.2"
unic-langid = "0.9.6"
whoami = { version = "1.6.1", default-features = false }
zstd = "0.13.3"

[build-dependencies]
chrono = "0.4.41"
winresource = "0.1.23"

# Minimize executable size (Target size < 10MB)
[profile.release.package."*"]
# opt-level = 3
codegen-units = 1
# debug = false
overflow-checks = false
# strip = true

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
overflow-checks = false

